SA-2723 - Fix top bar design on mobile + safe check in capitalizeFirst method

--- a/src/scss/includes/top_bar.scss
+++ b/src/scss/includes/top_bar.scss
@@ -18,10 +18,10 @@
 
 @media (max-width: 640px) {
   .top_bar {
-    top: var(--spacing-xxxs);
-    left: var(--spacing-xxxs);
-    width: calc(100% - calc(var(--spacing-xxxs) * 2));
-    border-radius: 8px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-radius: 0;
     box-shadow: 
       0 2px 16px 0 rgba(12, 12, 14, 0.2),
       0 4px 8px 0 rgba(12, 12, 14, 0.12);
